
 * Add support for parsing SDP attributes, generating SDP attributes, and
   passing it through. This support includes codecs such as H.263, H.264, SILK,
   and CELT. You are able to set up a call and have attribute information pass.
   This should help considerably with video calls.

 * The iLBC codec can now use a system-provided iLBC library if one is installed,
   just like the GSM codec.

Logging
-------------------
 * Asterisk version and build information is now logged at the beginning of a
   log file.

 * Threads belonging to a particular call are now linked with callids which get
   added to any log messages produced by those threads. Log messages can now be
   easily identified as involved with a certain call by looking at their call id.
   Call ids may also be attached to log messages for just about any case where
   it can be determined to be related to a particular call.

 * Each logging destination and console now have an independent notion of the
   current verbosity level.  Logger.conf now allows an optional argument to
   the 'verbose' specifier, indicating the level of verbosity sent to that
   particular logging destination.  Additionally, remote consoles now each
   have their own verbosity level.  The command 'core set verbose' will now set
   a separate level for each remote console without affecting any other
   console.


Music On Hold
-------------------
 * Added 'announcement' option which will play at the start of MOH and between
   songs in modes of MOH that can detect transitions between songs (eg.
   files, mp3, etc).


Parking
-------------------
 * New per parking lot options: comebackcontext and comebackdialtime. See
   configs/features.conf.sample for more details.

 * Channel variable PARKER is now set when comebacktoorigin is disabled in
   a parking lot.

 * Channel variable PARKEDCALL is now set with the name of the parking lot
   when a timeout occurs.


CDRs
-------------------

CDR Postgresql Driver
-------------------